19990525-09:13 CET Antonio Linares <alinares@fivetech.com>
  * makefile.b32
    - project dependencies list order changed to properly build everything in one pass

19990525-09:01 CET Antonio Linares <alinares@fivetech.com>
  * source/rtl/extend.c
    - wArrayIndex Borland C warnings fixed.

19990525-08:45 CET Antonio Linares <alinares@fivetech.com>
  * include/extend.h
    - workaround to avoid conflicts between FILE struct and harbour FILE()
  * source/rtl/files.c
    - _FILE() renamed to FILE()  /* tests/working/test_all.prg now builds fine */

19990525-08:21 CET Antonio Linares <alinares@fivetech.com>
  * makefile.b32
    - enhanced .path.obj so the compiler gets not built always
  * source/rtl/files.c
    - enhanced support for Borland C 5.2 compiler

19990524-19:20 EST David G. Holm <dholm@jsd-llc.com>
  * source/rtl/dates.c
    - Added HARBOUR DATE() function.
  * tests/working/dates.prg
    - Added use of DATE() function in first OUTSTD call.

19990524-21:05 CET Eddie Runia
  * source/rtl/strings.c
    PAD* didn't work correctly with negative numbers
  * source/rtl/extend.c
    _parnl needed casting

19990524-17:10 CET Eddie Runia
  * tests/working/test_all
    Fully automated the test bench.
    If you select HRB, it also runs the program.
    Just press <Enter> a couple of times and you should know how to loose
    Mankala blindly.

19990524-16:45 CET Les Griffith (upload Eddie Runia)
  * tests/working/iotest2.prg
    Test program fReadStr
  * tests/broken/exittest.prg
    Anyone up for a challenge ;-)

19990524-16:40 CET Eddie Runia
  * include/hbsetup.h
    WATCOM if added
  * tests/working/*.prg
    minor updates

19990524-14:30 CET Eddie Runia
  * source/vm/hvm.c
    <xArg> := PValue(<nArg>) added
  * tests/working/run_exp.h
    added to function list
  * tests/working/multiarg.prg
    test program used

19990524-10:25 CET Alexander Kressin (upload Eddie Runia)
  * source/hbpp
    added preprocessor
